# cg-notes

./: CMakeLists.txt
Hello Rectangle/: rectangle.cpp  rectangle.h  utils.cpp  vertexShader.vert
Hello Triangle/: 2nd_triangle.h  2nd_trianlge.cpp  processors.cpp  trangle.h  triangle.h  triangle_main.cpp  vertex_shader.vert
Hello Window/: main.cpp
cpp_notes/: main.cpp
creating a window/: main.cpp
hexagram/: fragmentShader2.frag  hexagram.cpp  hexagram.h  hexagram2.cpp  hexagram3.cpp  utils.cpp  vertexShader.vert
include/glad/: glad.h
math/: main.cpp
utils/: glad.c
